Set JVM argument EnableDynamicAgentLoading
Mutes WARNING: A Java agent has been loaded dynamically (..byte-buddy-agent/1.14.5/byte-buddy-agent-1.14.5.jar)